# mevi

./: .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  README.md  flake.nix  rust-toolchain.toml
.config/: cargo.toml
.github/: FUNDING.yml
crates/mevi/: Cargo.toml
crates/mevi-common/: Cargo.toml
crates/mevi-common/src/: lib.rs
crates/mevi-driver/: Cargo.toml
crates/mevi-driver-ebpf/: Cargo.toml  build.rs
crates/mevi-driver-ebpf/src/: lib.rs
crates/mevi-driver-ebpf/src/bpf/: .clang-format  .gitignore  mod.rs  tracer.bpf.c
crates/mevi-driver-ptrace-uffd/: Cargo.toml
crates/mevi-driver-ptrace-uffd/src/: lib.rs  tracer.rs  userfault.rs
crates/mevi-driver/src/: lib.rs
crates/mevi-frontend/: Cargo.toml  index.html
crates/mevi-frontend/src/: main.rs
crates/mevi-payload/: Cargo.toml
crates/mevi-payload/src/: lib.rs
crates/mevi-preload/: Cargo.toml
crates/mevi-preload/src/: lib.rs
crates/mevi/src/: main.rs  tracer.rs  userfault.rs
crates/mevi3/: Cargo.toml
crates/mevi3/src/: main.rs  tracer.rs  userfault.rs
src/: main.rs
