[workspace]
members = ["crates/*"]

[workspace.dependencies]
# expose-raw branch
userfaultfd = { git = "https://github.com/fasterthanlime/userfaultfd-rs", rev = "e9160a896f7d8d80c8b0943480885598bd698d0", features = [
	"linux4_14",
] }
postcard = { version = "1.0.0", features = ["alloc"] }

[profile.release]
debug = 1
