[package]
name = "mevi-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.26.2", optional = true }
rangemap = { version = "1.3.0", features = ["serde1"] }
serde = { version = "1.0.156", features = ["derive"] }

[features]
default = ["nix"]
