[package]
name = "mevi-driver-ptrace-uffd"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
humansize = "2.1.3"
libc = "0.2.139"
mevi-common = { version = "0.1.0", path = "../mevi-common" }
mevi-driver = { version = "0.1.0", path = "../mevi-driver" }
nix.workspace = true
passfd = "0.1.6"
procfs = "0.15.1"
rangemap = { version = "1.3.0", features = ["serde1"] }
serde = { version = "1.0.154", features = ["derive"] }
tracing = "0.1.37"
userfaultfd.workspace = true
