[package]
name = "mevi-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures-util = "0.3.26"
gloo-console = "0.2.3"
gloo-net = "0.2.6"
serde = { version = "1.0.154", features = ["derive"] }
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = ["csr"] }
