[package]
name = "mevi-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures-util = "0.3.26"
gloo-console = "0.2.3"
gloo-net = "0.2.6"
gloo-timers = { version = "0.2.6", features = ["futures"] }
humansize = "2.1.3"
instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"] }
itertools = "0.10.5"
mevi-common = { version = "0.1.0", path = "../mevi-common", default-features = false }
rangemap = { version = "1.3.0", features = ["serde1"] }
serde = { version = "1.0.154", features = ["derive"] }
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = ["csr"] }
