[package]
name = "mevi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["ws"] }
bincode = "1.3.3"
humansize = "2.1.3"
libc = "0.2.139"
nix = "0.26.2"
owo-colors = "3.5.0"
passfd = "0.1.6"
rangemap = { version = "1.3.0", features = ["serde1"] }
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
userfaultfd = "0.5.0"
